@@ -4,6 +4,8 @@ Revision history for Perl extension AnyEvent.
         - really replace longest run of :0: by :: in format_address,
           also properly convert :: and ::1 again.
         - support naptr name and decode it
+        - implement random weight sampling for SRV records, as per
+          rfc 2782.
         - replace ptr by real ptr lookup, provide reverse_lookup
           and reverse_verify to replace it, support v4mapped and
           v4compat addresses.
